# MobileCamera

./: .gitignore  README.md  build.gradle  gradle.properties  settings.gradle
app/: build.gradle
audiorecord/: build.gradle
harddecoder/: CMakeLists.txt  build.gradle
harddecoder/src/androidTest/java/com/media/lingxiao/harddecoder/: ExampleInstrumentedTest.java
harddecoder/src/main/: AndroidManifest.xml
harddecoder/src/main/cpp/: native-lib.cpp
harddecoder/src/main/cpp/libyuv/: Android.mk
harddecoder/src/main/java/com/media/lingxiao/harddecoder/: ApiException.java  CameraView.java  Client.java  EncoderParams.java  IoResultFunction.java  MediaSdk.java  Server.java
harddecoder/src/main/java/com/media/lingxiao/harddecoder/decoder/: AudioDecoder.java  H264Decoder.java
harddecoder/src/main/java/com/media/lingxiao/harddecoder/encoder/: AudioEncoder.java  H264Encoder.java  H264EncoderConsumer.java
harddecoder/src/main/java/com/media/lingxiao/harddecoder/events/: StrameEventHandler.java
harddecoder/src/main/java/com/media/lingxiao/harddecoder/model/: VideoStreamModel.java
harddecoder/src/main/java/com/media/lingxiao/harddecoder/pkgs/: PreViewFrameResponse.java
harddecoder/src/main/java/com/media/lingxiao/harddecoder/tlv/: Constants.java  DummySerializable.java  SerializeAdapter.java  ServerConfig.java  TLVCodecFactory.java  TLVDecoder.java  TLVEncoder.java
harddecoder/src/main/res/layout/: video_view.xml
harddecoder/src/main/res/values/: attrs.xml  strings.xml
harddecoder/src/test/java/com/media/lingxiao/harddecoder/: ExampleUnitTest.java
(+108 files in other folders)
